# ur_dlidar

./: README.md  ur_dlidar.rosinstall
move_group/: package.xml  setup.py
move_group/src/: __init__.py  admittance_control.py  move_base.py  ur3e_kinematic.py
plan/: 1-15.md
ur_control/: CMakeLists.txt  package.xml  setup.py
ur_control/src/: move_base.py  ur_controller_base.py
ur_control/src/ur_control/: __init__.py  admittance_control.py  fk_expression.txt  helper_func.py  ur3e.urdf  ur3e_kinematic.py  ur_controller_base.py
ur_dlidar/: CMakeLists.txt  package.xml
ur_dlidar/config/: vis.rviz
ur_dlidar/launch/: gen_urdf.sh  rviz.launch  ur3e_dlidar_bringup.launch
ur_dlidar/launch/inc/: load_ur.launch  load_ur3e_dlidar.launch
ur_dlidar/script/: dlidar_read.py  env_base.py  fcl_visualization.py  force_generate.py  helper_func.py  move.py  moves.py  speed_plot.py  task1.py  task2.py  test_moveit.py
ur_dlidar/script/Admittance Control/: admittance_control.py  force_generate.py  main.py
ur_dlidar/script/test/: julia_set.py
ur_dlidar/urdf/: ur.xacro  ur_dlidar.urdf  ur_dlidar.xacro
ur_dlidar/urdf/ur3e_dlidar/: ur3e_dlidar_macro.urdf.xacro  ur_dlidar.urdf
ur_dlidar_gazebo/: CMakeLists.txt  package.xml
ur_dlidar_gazebo/config/: vis.rviz
ur_dlidar_gazebo/launch/: test.launch  ur3e_dlidar_bringup.launch
ur_dlidar_gazebo/script/: config.py  env_base.py  env_base_copy.py  move.py  test.py  test_moveit.py
ur_dlidar_gazebo/urdf/: ur_dlidar.xacro
ur_dlidar_gazebo_moveit/: .setup_assistant  CMakeLists.txt  package.xml
ur_dlidar_gazebo_moveit/config/: ros_controllers.yaml
ur_dlidar_moveit/: .setup_assistant  CMakeLists.txt  package.xml
(+33 files in other folders)
